# gymprecice

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_proposal.yml
.github/workflows/: build-and-test.yml  pre-commit.yml
examples/: dummyTraining.py  precice-config.xml  run.sh
examples/closed_loop_AFC/: ppo_jet_cylinder_2D.py  ppo_rotating_cylinder_2D.py
examples/cylinder2D_openfoam/: OpenFoamRLEnv.py  OpenFoamRLEnvSM.py  dummy_training.py  dummy_training_cylinder2D.py  foam-functions-cylinder2D.sh  foam-functions.sh  foamserver.py  mesh_parser.py  precice-config.xml  utils.py
examples/cylinder2D_openfoam_Re100/: OpenFoamRLEnv.py  OpenFoamRLEnv_4_multiEnv.py  OpenFoamRLEnv_ppo4.py  agent.py  bounded_normal.py  cleanrl_ppo_bounded.py  customised_async_vector_env.py  dummy_training.py  dummy_training_ppo.py  dummy_training_ppo2.py  dummy_training_ppo4.py  field_parser.py  foam-functions-cylinder2D.sh  precice-config.xml  predicting_ppo_sb3.py  training_ppo_sb3.py  training_simple_agent.py  utils.py
examples/fluid-python/: run.sh
examples/open_loop_AFC/: fsi3.py
examples/openfoam_rl_env/: OpenFoamRLEnvSM.py  dummy_training.py  foam-functions.sh  mesh_parser.py  precice-config.xml  utils.py
examples/precice_openfoamSolver/: dummy_training.py  foam-functions.sh  precice-config.xml
examples/precice_pythonSolver/: precice-config.xml  run.sh
examples/test_cases/: mesh_study.py  plot_cd_cl.py
genericAPI/: gymprecice.py  mesh_parser.py  openfoam_envs.py  ppo.py  ppo_jet_cylinder.py  ppo_rotating_cylinder.py  precice-config.xml
genericAPI/jet_cylinder2D/: Allrun_parallel  clean.sh
genericAPI/review_version/: ppo_fsi3.py  ppo_jet_cylinder2D.py  ppo_rotating_cylinder2D.py
genericAPI/rotating_cylinder2D/: Allrun.pre  run.sh
genericAPI/utils/: foamutil.py  mesh_parser.py  oldutil.py
gymPrecice/: setup.py
gymPrecice/gymPreciceAdapter/: __init__.py
gymprecice/: LICENCE.md  core.py
gymprecice/gymprecice/: core.py
gymprecice/utils/: constants.py  fileutils.py  multienvutils.py  openfoamutils.py  precicexmlutils.py  vectorenvutil.py  xmlutils.py
tests/: mocked_precice.py  test_core.py
tests/envs/: mocked_core.py
(+284 files in other folders)
