# Package ######################################################################

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gymprecice"
version = "0.0.1"
authors = [{ name = "Mosayeb Shams (lead developer)", email = "m.shams@hw.ac.uk" }, { name = "Ahmed H. Elsheikh (co-developer and supervisor)", email = "a.elsheikh@hw.ac.uk" }]
description = "A preCICE adapter that provides a Gymnasium-like API to couple reinforcement learning and physics-based solvers for active control."
readme = "README.md"
requires-python = "== 3.8"

license = { text = "MIT License" }
keywords = ["Reinforcement Learning", "RL", "AI", "gymnasium", "gym", "preCICE", "precice", "Active Flow Control", "Active Control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "gymnasium==0.28.0",
    "pyprecice==2.4.0.0",
    "xmltodict>=0.13.0",
    "psutil>=5.9.2",
]

[project.optional-dependencies]
testing = [
    "pytest ==7.1.3",
    "pytest-mock==3.10.0",
]
tutorial = [
    "torch==1.12.1",
    "matplotlib >=3.0",
    "scipy>=1.7.3",
]
all = [
    # core
    "gymnasium==0.28.0",
    "pyprecice==2.4.0.0",
    "xmltodict>=0.13.0",
    "psutil>=5.9.2",
    # testing
    "pytest ==7.1.3",
    "pytest-mock==3.10.0",
    # tutorial
    "matplotlib >=3.0",
    "torch==1.12.1",
    "scipy>=1.7.3",
]

[project.urls]
Repository = "https://github.com/gymprecice/gymprecice"
"Bug Report" = "https://github.com/gymprecice/gymprecice/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["gymprecice", "gymprecice.*"]

[tool.setuptools.package-data]
gymprecice = []

# Linters and Test tools #######################################################

[tool.black]
safe = true

[tool.isort]
atomic = true
profile = "black"
src_paths = ["gymprecice", "tests"]
extra_standard_library = ["typing_extensions"]
indent = 4
lines_after_imports = 2
multi_line_output = 3
